# test-posgen

./: .gitignore  CMakeLists.txt  README.md  bindings.cpp  diagram.drawio  gen.py  gen2.py  gen3.py  gen4.py  gen5.py  gen6.py  gen7.py  gen8.py  jerk.ipynb  jerk2.py  jerk3.py  jerk4.py  jerk5.py  positionGenerator.cpp  positionGeneratorDouble.cpp  positionGeneratorDouble.hpp  prout.py  pyproject.toml  requirements.txt  scurve.hpp  scurve.py  test.py  test_scurve_cpp.py  utility.hpp
old/: bindings.cpp  conversion.hpp  positionGenerator.cpp  positionGenerator.hpp  positionGeneratorDouble.cpp  positionGeneratorDouble.hpp
