[build-system]
requires = ["scikit-build-core>=0.8", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "positiongen"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.7.5",
]

[tool.scikit-build]
cmake.minimum-version = "3.15"
build-dir = "build"
build.verbose = true
sdist.include = ["*.cpp", "*.hpp"]
